Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,9 +31,21 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Welcome to the Boulder Project, an Intent-based NBI Project</p>
+        <h1>
+<a id="welcome-to-the-boulder-project-an-intent-based-nbi-project" class="anchor" href="#welcome-to-the-boulder-project-an-intent-based-nbi-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Boulder Project, an Intent-based NBI Project</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The Open Intent NBI is a northbound project that provides a scriptable runtime that maps to Intent structures that allows users to create portable applications across different underlying controllers.</p>
+
+<p>(WORK IN PROGRESS) - We apologize for the lack of documentation following the proof of concept proper documentation will be provided to explain how to run and work with Boulder.</p>
+
+<h1>
+<a id="compiling-and-building" class="anchor" href="#compiling-and-building" aria-hidden="true"><span class="octicon octicon-link"></span></a>Compiling and Building</h1>
+
+<p>You can build this project from SBT or Maven.</p>
+
+<p>sbt install / mvn install will provide you with compiled binary.</p>
+
+<p>The Boulder Project is OpenSource and available under the Apache 2 License.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
